# yomi

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: basic.rs  styled.rs
src/: lib.rs
src/core/: animation.rs  cli.rs  command.rs  mod.rs
src/tests/: mod.rs
