[package]
description = "Simple CLI builder."
edition = "2021"
keywords = ["cli", "command", "builder", "yomi"]
license = "MIT"
name = "yomi"
readme = "README.md"
repository = "https://github.com/dehwyy/yomi"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.0", features = ["derive"]}
indicatif = {version = "0.17.8"}
tokio = {version = "1.40.0", features = ["time", "macros", "rt-multi-thread", "process", "io-util", "fs"]}
