[package]
authors = ["dehwyy <dehwyyy@gmail.com>"]
description = "Simple styled CLI builder and terminal command executor."
edition = "2021"
keywords = ["cli", "yomi"]
license = "MIT"
name = "yomi"
readme = "README.md"
repository = "https://github.com/dehwyy/yomi"
version = "0.1.1"

[dependencies]
clap = {version = "4.5.0", features = ["derive"]}
indicatif = {version = "0.17.8"}
tokio = {version = "1.40.0", features = ["time", "macros", "rt-multi-thread", "process", "io-util", "fs"]}
